[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[lib]
name = "kernel"
path = "src/main.rs"

[dependencies]
rlibc = "1.0.0"
tinybmp = "0.3.3"
