[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[lib]
crate-type = ["staticlib"]
name = "kernel"
path = "src/main.rs"

[dependencies]
rlibc = "1.0.0"
tinybmp = "0.3.3"
volatile = "0.4.5"
spin = "0.9.3"
x86 = "0.50.0"
x86_64 = "0.14.10"
lazy_static = { version = "1.4.0",  features = ["spin_no_std"] }
# None of the limine libs below work
#limine = "0.1.8"
#limine-protocol = "0.4.0"
